# zeitgeist

./: .gitignore  LICENSE  README.md  fetch_tagesschau.py  gatherer.py  preset_text.md  pyproject.toml  requirements.txt  scrape_zeit.py  scraper.py  sources.yaml  utils.py
.github/workflows/: gather_news.yml  generate_capsule.yml
app/: utils.py
data/: archive.jsonl
data/capsules/: 2025-10-30.md  2025-11-02.md  2025-11-03.md  2025-11-04.md  2025-11-05.md  2025-11-06.md  2025-11-07.md  2025-11-08.md  2025-11-09.md  2025-11-10.md  2025-11-11.md  2025-11-12.md  2025-11-13.md  2025-11-14.md  2025-11-15.md  2025-11-16.md  2025-11-17.md  2025-11-18.md  2025-11-19.md  2025-11-20.md  2025-11-21.md  2025-11-22.md  2025-11-23.md  2025-11-24.md  2025-11-25.md  2025-11-26.md  2025-11-27.md  2025-11-28.md  2025-11-29.md  2025-11-30.md  2025-12-01.md  2025-12-02.md  2025-12-03.md  2025-12-04.md  2025-12-05.md  2025-12-06.md  2025-12-07.md  2025-12-08.md  2025-12-09.md  2025-12-10.md  (+224 more)
docs/: echoes_structure.md  gatherer-type-refactor.md  potential_sources.md  sentiment_analysis.md
docs/reviews/: gatherer-type-refactor-review.md
scripts/: fetch_tagesschau.py  scrape_zeit.py
src/: briefing.py  capsule_generator.py  gatherer.py  gatherer_base.py  run_gatherers.py  utils.py
src/gatherer_sources/: gather_spiegel.py  gather_tagesschau.py  gather_zeit.py
src/gatherer_types/: gatherer_api.py  gatherer_rss.py  gatherer_web.py
src/gathering_scripts/: gather_japantimes.py  gather_tagesschau.py  gather_zeit.py
workbench/: match2025-07-27.html  soup_html_2025-07-27.html
